// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileInput Snapshots No props 1`] = `
<div
  className="sc-AykKD erepSp"
  title={null}
>
  <input
    className="sc-AykKE dzWrRj"
    disabled={false}
    onChange={[Function]}
    type="file"
  />
  <label
    className="sc-AykKF pwLr"
  >
    <svg
      className="sc-AykKC fxMzgc sc-AykKG dVAGiI"
      viewBox="0 0 24 24"
    >
      <path
        d="M9 .6l-.72.68-7 7 1.44 1.44L8 4.44V21h2V4.44l5.28 5.28 1.44-1.44-7-7L9 .6zM0 23v2h18v-2H0z"
      />
    </svg>
    <span />
  </label>
</div>
`;

exports[`FileInput Snapshots child and ID 1`] = `
<div
  className="sc-AykKD erepSp"
  title={null}
>
  <input
    className="sc-AykKE dzWrRj"
    disabled={false}
    id="test"
    onChange={[Function]}
    type="file"
  />
  <label
    className="sc-AykKF pwLr"
    htmlFor="test"
  >
    <svg
      className="sc-AykKC fxMzgc sc-AykKG dVAGiI"
      viewBox="0 0 24 24"
    >
      <path
        d="M9 .6l-.72.68-7 7 1.44 1.44L8 4.44V21h2V4.44l5.28 5.28 1.44-1.44-7-7L9 .6zM0 23v2h18v-2H0z"
      />
    </svg>
    <span>
      <p>
        Body
      </p>
    </span>
  </label>
</div>
`;

exports[`FileInput Snapshots with children 1`] = `
<div
  className="sc-AykKD erepSp"
  title={null}
>
  <input
    className="sc-AykKE dzWrRj"
    disabled={false}
    onChange={[Function]}
    type="file"
  />
  <label
    className="sc-AykKF pwLr"
  >
    <svg
      className="sc-AykKC fxMzgc sc-AykKG dVAGiI"
      viewBox="0 0 24 24"
    >
      <path
        d="M9 .6l-.72.68-7 7 1.44 1.44L8 4.44V21h2V4.44l5.28 5.28 1.44-1.44-7-7L9 .6zM0 23v2h18v-2H0z"
      />
    </svg>
    <span>
      <p>
        Body
      </p>
    </span>
  </label>
</div>
`;
